--- a/src/djangocms_leaflet/templates/djangocms_leaflet/marker.html
+++ b/src/djangocms_leaflet/templates/djangocms_leaflet/marker.html
@@ -1,14 +1,12 @@
-{% load static cms_tags sekizai_tags i18n l10n %}
 {% localize off %} {# avoid decimal comma #}
 
 {% addtoblock "js" strip %}
 <script>
-	$(function () {
+	window.onload = function() {
         L.marker([{{ instance.latitude }}, {{ instance.longitude }}]).addTo(map)
             .bindPopup('{{ instance.name }}')
             .openPopup();
-
-    })
+    }
 </script>
 {% endaddtoblock %}
 
