--- a/src/djangocms_leaflet/templates/djangocms_leaflet/marker.html
+++ b/src/djangocms_leaflet/templates/djangocms_leaflet/marker.html
@@ -1,12 +1,13 @@
+{% load sekizai_tags l10n %}
 {% localize off %} {# avoid decimal comma #}
 
 {% addtoblock "js" strip %}
 <script>
-	window.onload = function() {
+    ready(function () {
         L.marker([{{ instance.latitude }}, {{ instance.longitude }}]).addTo(map)
             .bindPopup('{{ instance.name }}')
             .openPopup();
-    }
+    })
 </script>
 {% endaddtoblock %}
 
