Geocoding of map and marker location with Nominatim
Rename name to _name and provide property name.

--- a/src/djangocms_leaflet/templates/djangocms_leaflet/map.html
+++ b/src/djangocms_leaflet/templates/djangocms_leaflet/map.html
@@ -45,7 +45,7 @@ ready(function() {
 
     {% if instance.set_marker %}
         L.marker([{{ instance.latitude }}, {{ instance.longitude }}]).addTo(map)
-            .bindPopup('{{ instance.name }}')
+            .bindPopup('{{ instance }}')
             .openPopup();
     {% endif %}
 })
