fix: Add function ready(fn) into own separately into sekizai block js
This way it the function is added only once when there are multiple map instances
on the same page.

--- a/src/djangocms_leaflet/templates/djangocms_leaflet/map.html
+++ b/src/djangocms_leaflet/templates/djangocms_leaflet/map.html
@@ -27,7 +27,12 @@ function ready(fn) {
   }
   document.addEventListener('DOMContentLoaded', fn);
 }
-ready(function() {
+</script>
+{% endaddtoblock %}
+
+{% addtoblock "js" strip %}
+<script>
+    ready(function() {
     map = L.map('map-{{ instance.id }}').setView([{{ instance.latitude }}, {{ instance.longitude }}], {{ instance.zoom_level }});
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
