Revert "fix: wait for leaflet lib to be loaded"

--- a/src/djangocms_leaflet/templates/djangocms_leaflet/map.html
+++ b/src/djangocms_leaflet/templates/djangocms_leaflet/map.html
@@ -25,13 +25,14 @@
 
 {% addtoblock "js" strip %}
 <script>
+{# Replacement for jquery’s $(function() {}) #}
+{# https://stackoverflow.com/questions/799981/document-ready-equivalent-without-jquery #}
 function ready(fn) {
-    // waits for the document to be fully loaded if leaflet is not available yet
-    if (window.L) {
-        fn();
-    } else {
-        window.addEventListener('load', fn);
-    }
+  if (document.readyState !== 'loading') {
+    fn();
+    return;
+  }
+  document.addEventListener('DOMContentLoaded', fn);
 }
 </script>
 {% endaddtoblock %}
